--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: objective-c
+before_install: gem install cocoapods --pre -N
 cache: cocoapods
 podfile: Example/Podfile
 script: script/ci
