--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: objective-c
-before_install: gem install cocoapods --pre -N
+before_install: 
+	- gem install cocoapods --pre -N
+	- brew update
+	- brew upgrade xctool
 cache: cocoapods
 podfile: Example/Podfile
 script: script/ci
