--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 language: objective-c
 before_install: 
-  - gem install cocoapods --pre -N
-  - brew update
-  - brew upgrade xctool
+  - gem install cocoapods xcpretty -N
 cache: cocoapods
 podfile: Example/Podfile
 script: script/ci
