--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
+osx_image: xcode61
 language: objective-c
-before_install: 
-  - gem install cocoapods xcpretty -N
+before_install: gem install cocoapods xcpretty -N
 cache: cocoapods
 podfile: Example/Podfile
-script: script/ci
+script:
+    - export LC_CTYPE=en_US.UTF-8
+    - export LANG=en_US.UTF-8
+    - set -o pipefail && xcodebuild -workspace Example/SSOperationsExample.xcworkspace -scheme SSOperationsExample -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 6" clean test | xcpretty -c
